fixed spacing of Learn component on mobile viewing

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -98,11 +98,10 @@
   }
   .knowChess {
     margin: 0;
-    display: none;
   }
   .learn h2 {
     font-size: 25vw;
-    margin-top: 15vh;
+    margin-top: 5vh;
   }
   .pieceMoves ul {
     margin: 0px;
@@ -133,5 +132,10 @@
   .pieceMoves li img {
     width: 36vw;
     height: auto;
+  }
+  .illegalMoves li {
+    font-size: 24px;
+    margin-top: 2vh;
+    line-height: 3vh;
   }
 }
